# axon

./: .gitignore  README.md  pyproject.toml
.zed/: settings.json  tasks.json
src/axon/: __init__.py  db.py  markdown.py  models.py  sync.py  ui.py  ui.tcss  util.py
src/axon/markdown/: __init__.py  plugins.py  transform.py
src/axon/ui/: __init__.py  app.tcss  widgets.py
tests/: complex.md  conftest.py  list.md  logseq.md  reference.md  test_markdown.py  test_markdown_plugins.py  test_markdown_transform.py  test_util.py
tests/md/: complex.md  list-reference.md  logseq.md
